# investia

./: pyproject.toml
investment/: __init__.py
investment/accounts/: main.py
investment/accounts/classes/: account.py  expense.py  goal.py  manager.py  salary.py
investment/objects/: main.py
investment/objects/items/: house.py  object.py
